# Atol

./: .gitignore  Atol-server.pro.user.5e55d76  Atol-server.pro.user.8182a91  Atol-server2.pro  Atol-server2.pro.user.5e55d76  Atol-server2.pro.user.8980a10  Atol-server2.pro.user.f2e104c  CMakeLists.txt  CMakeLists.txt.user.439548c  CMakeLists.txt.user.RIecIe  build.bat  clean.bat  debug.bat  msvc_make.bat
resources/: Atol.rc  qml.qrc
resources/qml/: Animations.qml  Cashbox.qml  JWT.qml  LeftPanel.qml  ListComponent.qml  Presets.qml  Reciepts.qml  ReturnOptions.qml  Settings.qml  StatusPage.qml  main.qml
resources/qml/ConfirmWindow/: ConfirmWindow.qml
resources/qml/Pages/: Cashbox.qml  JWT.qml  Receipts.qml  Settings.qml
resources/qml/StatusWindow/: CircleProgress.qml  StatusWindow.qml
resources/qml/Windows/: ConfirmWindow.qml  Notifier.qml  Notify.qml  ReturnOptions.qml  StatusWindow.qml
resources/qml/custom/: CircleProgress.qml  FloatingCircle.qml  LeftPanel.qml  ListComponent.qml  Receipt.qml  Reciept.qml  VerticalSeparator.qml
sources/: atol.cpp  atol.h  main.cpp
sources/core/: httpWorker.cpp  httpWorker.h  httpserver.cpp  httpserver.h  jwt.cpp  jwt.h  mewbas.cpp  mewbas.h  network.cpp  network.h  receiptparser.cpp  receiptparser.h  recieptlogger.cpp  recieptlogger.h  reciepts.cpp  reciepts.h  server.cpp  server.h  terminal.cpp  terminal.h  terminalparser.cpp  terminalparser.h  timer.cpp  timer.h  tray.cpp  tray.h
sources/core/types/: configs.cpp  configs.h  daemon.cpp  daemon.h  logs.cpp  logs.h  payment.cpp  payment.h  request.cpp  request.h  task.cpp  task.h  tobject.cpp  tobject.h
